duchain/tests/pyduchaintest.cpp
@@ -446,6 +446,8 @@ void PyDUChainTest::testTypes_data()
     QTest::newRow("tuple2") << "foo, checkme = 3, \"str\"" << "string";
     QTest::newRow("tuple_type") << "checkme = 1, 2" << "tuple";
     
+    QTest::newRow("dict_iteritems") << "d = {1:2, 3:4}\nfor checkme, k in d.iteritems(): pass" << "int";
+    
     QTest::newRow("class_method_import") << "class c:\n attr = \"foo\"\n def m():\n  return attr;\n  return 3;\ni=c()\ncheckme=i.m()" << "int";
     QTest::newRow("getsListDecorator") << "foo = [1, 2, 3]\ncheckme = foo.reverse()" << "list of int";
     
@@ -464,6 +466,8 @@ void PyDUChainTest::testTypes_data()
     
     QTest::newRow("tuple_indexaccess") << "t = 3, 5.5\ncheckme = t[0]" << "int";
     QTest::newRow("tuple_indexaccess2") << "t = 3, 5.5\ncheckme = t[1]" << "float";
+    
+    QTest::newRow("tuple_loop") << "t = [(1, \"str\")]\nfor checkme, a in t: pass" << "int";
     
     QTest::newRow("tuple_listof") << "l = [(1, 2), (3, 4)]\ncheckme = l[1][0]" << "int";
     
